[project]
name = "k"
version = "0.0.1a2"
description = "The k agent framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "kcastle-ai",
    "kcastle-agent",
    "kcastle",
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
"kcastle-ai" = { workspace = true }
"kcastle-agent" = { workspace = true }
kcastle = { workspace = true }

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]

[tool.pytest.ini_options]
testpaths = ["packages"]
asyncio_mode = "auto"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
reportUnnecessaryTypeIgnoreComment = "warning"
include = [
    "packages/*/src/**/*.py",
    "packages/*/tests/**/*.py",
]


[tool.vulture]
ignore_names = ["test_*", "Test*"]
paths = ["packages/kai/src", "packages/kagent/src", "packages/kcastle/src"]
